# reasoners

./: .gitignore  CMakeLists.txt  README.md  build.sh  pyproject.toml  setup.py
Transformers_r/: Brewfile  requirements.txt
data/: __init__.py  base.py  data_mixer.py  data_mixer_config.yaml  factory.py
data/datasets/: __init__.py
data/datasets/gsm8k/: gsm8k.py
data/datasets/openthoughts2/: __init__.py  openthoughts2.py
data/datasets/stratos/: __init__.py  stratos.py
data/gsm8k/: gsm8k.py
data/openthoughts2/: openthoughts2.py
reasoners/: __init__.py  tokenizer.py
reasoners/data/: collate.py  preprocess.py
reasoners/models/: __init__.py
reasoners/models/Qwen/: __init__.py
reasoners/models/Qwen/Qwen2.5-1.5B-Instruct/: __init__.py  load_model.py  load_tokenizer.hpp  tokenizer.py
reasoners/prompts/: system_prompt.yaml
reasoners/tokenizer/: qwen_tokenizer.py
reasoners/tokenizer/Qwen/Qwen2.5-1.5B-Instruct/: load_tokenizer.hpp  python_bindings.cpp
reasoners/trainer/sft/data/: bucketing.py  collate.py  preprocess.py
reasoners/utils/: device.py  logger.py  lr_schedulers.py
tests/: test_bucketing.py  test_dataset_registry.py  test_proc_test.py  test_tokenizer.py
transformers-insiders/: kv-cache.py
